--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -1293,6 +1293,7 @@ html,body{
 .ui-table-grid tfoot td {
     padding:10px;
     white-space:nowrap;
+    vertical-align: top;
 }
 .ui-table-grid tbody td a {
     text-decoration:underline;
