--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -958,6 +958,11 @@ html,body{
 .ui-message-options {
     margin-bottom:10px;
 }
+.ui-message span.details {
+    display:block;
+    opacity:0.5;
+    margin-top:20px;
+}
 .ui-confirm {
     display:block;
     padding:5px 20px 5px 20px;
