--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1244,6 +1244,11 @@ html,body{
 .ui-table-list {
     overflow:hidden;
 }
+.ui-table-list.shadow {
+    box-shadow: 0 0 5px 3px #CCCCCC;
+    position: relative;
+    z-index:1;
+}
 .ui-table-list .ui-icon-arrow, .ui-table-list .ui-icon-asc, .ui-table-list .ui-icon-desc {
     position:absolute;
     width:20px;
@@ -1322,6 +1327,7 @@ html,body{
 .ui-table-list tfoot td {
     padding:10px;
     white-space:nowrap;
+    vertical-align: top;
 }
 .ui-table-list thead td.highlighted, .ui-table-list thead td.highlighted div {
     background-color:#C4C8FF;
