--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -452,13 +452,24 @@ ul.ui-list li:hover, ul.ui-list li.current, ul.ui-list li:hover *, ul.ui-list li
     -webkit-border-radius:0px;
     border-radius:0px;
 }
-.ui-button-option-ul li:last-child .ui-button-inner {
+.ui-button-option-ul .ui-button-inner {
+    margin-top:-1px;
+}
+.ui-button-option-ul.down li:last-child .ui-button-inner {
     -moz-border-bottom-left-radius:3px;
     -webkit-border-bottom-left-radius:3px;
     border-bottom-left-radius:3px;
     -moz-border-bottom-right-radius:3px;
     -webkit-border-bottom-right-radius:3px;
     border-bottom-right-radius:3px;
+}
+.ui-button-option-ul.up li:first-child .ui-button-inner {
+    -moz-border-top-left-radius:3px;
+    -webkit-border-top-left-radius:3px;
+    border-top-left-radius:3px;
+    -moz-border-top-right-radius:3px;
+    -webkit-border-top-right-radius:3px;
+    border-top-right-radius:3px;
 }
 .ui-button-option .ui-option .ui-button-inner {
     padding:0px 7px 0px 7px;
@@ -1334,7 +1345,17 @@ html,body{
 .ui-table-grid tbody td a {
     text-decoration:underline;
 }
-
+table.total td {
+    background:transparent !important;
+    padding:0 0 0 5px;
+    text-align: right;
+}
+table.total td, table.total td * {
+    color:#C4C4C4 !important;
+}
+table.total tr:hover td {
+    background:transparent;
+}
 /* UI Table image
 -----------------------------------------------------------------------------------------------------*/
 table.image-cont {
