--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -347,7 +347,6 @@ ul.ui-list li:hover, ul.ui-list li.current, ul.ui-list li:hover *, ul.ui-list li
 }
 .ui-field-tag {
     border:1px solid #EEEEEE;
-    margin:5px 5px 0px 0px;
     -moz-border-radius:5px;
     -webkit-border-radius: 5px;
     border-radius:5px;
@@ -476,13 +475,24 @@ ul.ui-list li:hover, ul.ui-list li.current, ul.ui-list li:hover *, ul.ui-list li
     -webkit-border-radius:0px;
     border-radius:0px;
 }
-.ui-button-option-ul li:last-child .ui-button-inner {
+.ui-button-option-ul .ui-button-inner {
+    margin-top:-1px;
+}
+.ui-button-option-ul.down li:last-child .ui-button-inner {
     -moz-border-bottom-left-radius:3px;
     -webkit-border-bottom-left-radius:3px;
     border-bottom-left-radius:3px;
     -moz-border-bottom-right-radius:3px;
     -webkit-border-bottom-right-radius:3px;
     border-bottom-right-radius:3px;
+}
+.ui-button-option-ul.up li:first-child .ui-button-inner {
+    -moz-border-top-left-radius:3px;
+    -webkit-border-top-left-radius:3px;
+    border-top-left-radius:3px;
+    -moz-border-top-right-radius:3px;
+    -webkit-border-top-right-radius:3px;
+    border-top-right-radius:3px;
 }
 .ui-button-option .ui-option .ui-button-inner {
     padding:0px 7px 0px 7px;
