--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -997,6 +997,7 @@ html,body{
     display:block;
     opacity:0.5;
     margin-top:20px;
+    text-align:left;
 }
 .ui-confirm {
     display:block;
