--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1280,6 +1280,15 @@ html,body{
     display:none;
 }
 
+/*---- table_form_clean -----*/
+.ui-table-clean {
+    width:auto;
+    border-spacing: 0px;
+}
+.ui-table-clean td {
+    padding:0px 5px 5px 0px
+}
+
 /*---- table_list -----*/
 .ui-table-list {
     overflow:hidden;
