--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -1862,7 +1862,7 @@ div.search {
     stroke-width: 1px;
     fill:none;
 }
-.ui-chart-grid .legend text {
+.ui-chart-grid .legend text, .ui-chart-grid text {
     fill:#C4C4C4;
 }
 .ui-chart-grid .current text {
@@ -1881,6 +1881,9 @@ div.search {
     fill-opacity: 1;
     stroke-width:2px;
 }
+.ui-chart-grid .path1 rect {
+    fill: #6C8CC8;
+}
 .ui-chart-grid .current rect.path1 {
     fill: #405377;
 }
@@ -1896,6 +1899,12 @@ div.search {
     fill: #C86C5E;
     fill-opacity: 1;
     stroke-width:2px;
+}
+.ui-chart-grid .path2 rect {
+    fill: #C86C5E;
+}
+.ui-chart-grid .current rect.path2 {
+    fill: #C86C5E;
 }
 /* UI Pie
 -----------------------------------------------------------------------------------------------------*/
@@ -2354,6 +2363,9 @@ div.search {
     width:100%;
     table-layout: fixed;
 }
+.custom-dashstats td {
+    vertical-align: top;
+}
 .custom-dashstats-list {
     overflow:auto;
 }
@@ -2373,7 +2385,6 @@ div.search {
 }
 .custom-dashstats p.custom-foot {
     text-align:center;
-    height:30px;
 }
 .ui-box {
     padding-right:10px;
