--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -2019,7 +2019,6 @@ div.search {
 /* UI Scheduler
 -----------------------------------------------------------------------------------------------------*/
 .ui-event-calendar {
-    background: #FFFFFF;
     width: 100%;
     height: 100%;
     padding: 10px;
@@ -2067,7 +2066,6 @@ div.search {
     border-spacing: 1px;
 }
 .ui-event-calendar .cal-head th {
-    background: #FFFFFF;
     padding: 5px;
     text-align: left;
     font-weight: normal;
@@ -2124,7 +2122,6 @@ div.search {
     border-spacing: 0px;
 }
 .ui-event-calendar table.week-head th {
-    background: #FFFFFF;
     padding: 5px;
     text-align: center;
     font-weight: normal;
@@ -2368,11 +2365,11 @@ div.search {
     border:1px solid transparent;
 }
 .ui-calendar-helper tbody span.today {
-    border-color:#CDCDCD !important;
+    border-color:#FFFFFF !important;
 }
 .ui-calendar-helper tbody span.selected {
-    background:#F8F8F8;
-    border-color:#F8F8F8;
+    background:#DDDDDD;
+    border-color:#DDDDDD;
 }
 /* Custom CSS
 -----------------------------------------------------------------------------------------------------*/
