--- a/lib/css/main.scss
+++ b/lib/css/main.scss
@@ -1,87 +1,13 @@
-$color_bas: #DDDDDD;
-
-@mixin box-shadow($shadows...) {
-  -moz-box-shadow: $shadows;
-  -webkit-box-shadow: $shadows;
-  box-shadow: $shadows;
-}
-
-@mixin box-sizing($sizing) {
-  -moz-box-sizing: $sizing;
-  -webkit-box-sizing: $sizing;
-  box-sizing: $sizing;
-}
-
-@mixin transition($transitions...) {
-  -moz-box-shadow: $transitions;
-  -webkit-box-shadow: $transitions;
-  box-shadow: $transitions;
-}
-
-@mixin transform($transform) {
-  transform: $transform;
-  -moz-transform: $transform;
-  -ms-transform: $transform;
-  -o-transform: $transform;
-  -webkit-transform: $transform;
-}
-
-@mixin border-radius($radius) {
-  -moz-border-radius: $radius;
-  -webkit-border-radius: $radius;
-  border-radius: $radius;
-}
-
-@mixin border-bottom-right-radius($radius) {
-  -moz-border-bottom-right-radius: $radius;
-  -webkit-border-bottom-right-radius: $radius;
-  border-bottom-right-radius: $radius;
-}
-
-@mixin border-top-right-radius($radius) {
-  -moz-border-top-right-radius: $radius;
-  -webkit-border-top-right-radius: $radius;
-  border-top-right-radius: $radius;
-}
-
-@mixin border-bottom-left-radius($radius) {
-  -moz-border-bottom-left-radius: $radius;
-  -webkit-border-bottom-left-radius: $radius;
-  border-bottom-left-radius: $radius;
-}
-
-@mixin border-top-left-radius($radius) {
-  -moz-border-top-left-radius: $radius;
-  -webkit-border-top-left-radius: $radius;
-  border-top-left-radius: $radius;
-}
-
-@mixin gradient($from, $to) {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, $from), color-stop(1, $to));
-  background:-moz-linear-gradient(top, $from 5%, $to 100%);
-  background:-webkit-linear-gradient(top, $from 5%, $to 100%);
-  background:-o-linear-gradient(top, $from 5%, $to 100%);
-  background:-ms-linear-gradient(top, $from 5%, $to 100%);
-  background:linear-gradient(to bottom, $from 5%, $to 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to',GradientType=0);
-}
+@import "base";
 
 /* Defaults
 -----------------------------------------------------------------------------------------------------*/
-* {margin:0; padding:0; color:#666666; outline:0;font-size:12px; font-family:tahoma,verdana,arial;}
+* {margin:0; padding:0; color:#666666; outline:0; font-size:12px; font-family:tahoma,verdana,sans-serif;}
 *, *:before, *:after {
   @include box-sizing(border-box);
 }
 a:hover{cursor: pointer}
 img {border:0;}
-div,p,a,span {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
 
 /* Globals
 -----------------------------------------------------------------------------------------------------*/
@@ -158,51 +84,40 @@ div,p,a,span {
 }
 .link {
   color:#485E88;
-}
-.link:hover {
-  text-decoration:underline;
+  &:hover {
+    text-decoration:underline;
+  }
 }
 span.tag-high {
   background: #FF6060;
   color: #FFFFFF;
   padding: 3px;
-  -moz-border-radius:3px;
-  -webkit-border-radius: 3px;
-  border-radius:3px;
+  @include border-radius(3px);
 }
 span.tag-medium {
   background: #AECB4E;
   color: #FFFFFF;
   padding: 3px;
-  -moz-border-radius:3px;
-  -webkit-border-radius: 3px;
-  border-radius:3px;
+  @include border-radius(3px);
 }
 span.tag-low {
   background: #52CB6C;
   color: #FFFFFF;
   padding: 3px;
-  -moz-border-radius:3px;
-  -webkit-border-radius: 3px;
-  border-radius:3px;
+  @include border-radius(3px);
 }
 .ui-loader {
   position:absolute;
   top:0;
   left:0;
   opacity:0;
-  filter: alpha(opacity=0);
   width:100%;
   height:100%;
   background:#FFFFFF url(../images/ui/loader.gif) center center no-repeat;
-}
-.ui-loader.active {
-  opacity:0.5;
-  filter: alpha(opacity=50);
-  transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
+  &.active {
+    opacity:0.5;
+    @include transition(all 0.5s ease-in-out);
+  }
 }
 #ui-unactivepage {
   position:absolute;
@@ -211,16 +126,11 @@ span.tag-low {
   width:100%;
   height:100%;
   opacity:0;
-  filter: alpha(opacity=0);
   background:#FFFFFF;
-}
-#ui-unactivepage.active {
-  opacity:0.5;
-  filter: alpha(opacity=50);
-  transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
+  &.active {
+    opacity:0.5;
+    @include transition(all 0.5s ease-in-out);
+  }
 }
 .ui-process-loading {
   position:absolute;
@@ -247,11 +157,9 @@ span.tag-low {
   a {
     display:block;
     position:absolute;
-    top:0px;
-    right:0px;
-    -moz-border-radius:7px;
-    -webkit-border-radius: 7px;
-    border-radius:7px;
+    top:0;
+    right:0;
+    @include border-radius(7px);
     font-size:10px;
     border:1px solid #CDCDCD;
     background:#F2F2F2;
@@ -272,9 +180,7 @@ span.tag-low {
   width:200px;
   padding:5px;
   z-index:9999;
-  -moz-border-radius:5px;
-  -webkit-border-radius: 5px;
-  border-radius:5px;
+  @include border-radius(5px);
   font-size:11px;
   border:1px solid #B4AE8A;
 }
@@ -388,7 +294,7 @@ ul.ui-list li:hover, ul.ui-list li.current, ul.ui-list li:hover *, ul.ui-list li
     border-left: 1px solid #CDCDCD;
     border-bottom: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
-    filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true',sizingMethod='image')";
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true',sizingMethod='image');
     &.icon {
       padding-left: 0;
       &:before {
@@ -554,7 +460,6 @@ ul.ui-list li:hover, ul.ui-list li.current, ul.ui-list li:hover *, ul.ui-list li
 }
 .ui-button-disabled {
   opacity:0.5;
-  filter: alpha(opacity=50);
 }
 .ui-button-active:hover .ui-button-inner {
   @include gradient(#e9e9e9, #f9f9f9);
@@ -618,7 +523,6 @@ html,body{
     &:hover {
       background:#48586E;
       opacity:0.8;
-      filter: alpha(opacity=50);
     }
     div {
       height:80px;
@@ -692,9 +596,7 @@ html,body{
   padding-bottom:10px;
   div {
     background:#FFFFFF;
-    -moz-box-shadow: 0 0 8px #3F5277;
-    -webkit-box-shadow: 0 0 8px #3F5277;
-    box-shadow: 0 0 8px #3F5277;
+    @include box-shadow(0 0 8px #3F5277);
   }
   a {
     display:block;
@@ -717,8 +619,6 @@ html,body{
 
 /* UI Bottom Part
 -----------------------------------------------------------------------------------------------------*/
-
-/* ---- ui menu ---- */
 .ui-start-menu-win {
   width:310px;
   position:absolute;
@@ -851,9 +751,7 @@ html,body{
     position: absolute;
     margin-top: 2px;
     margin-left: -14px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
+    @include border-radius(2px);
   }
 }
 
@@ -975,14 +873,14 @@ html,body{
     position:relative;
     overflow:hidden;
     text-shadow: 1px 1px 1px #2C394C;
-  }
-  div.title h3, div.title h3 span {
-    color:#EEEEEE;
-    line-height:24px;
-    margin-left:5px;
-  }
-  div.title h3:before {
-    margin-right:5px;
+    h3, h3 span {
+      color:#EEEEEE;
+      line-height:24px;
+      margin-left:5px;
+    }
+    h3:before {
+      margin-right:5px;
+    }
   }
   .ui-win-close, .ui-win-max, .ui-win-min {
     position:absolute;
@@ -994,15 +892,15 @@ html,body{
     margin:0;
     @include border-radius(5px);
     border:1px solid transparent;
-  }
-  .ui-win-close:hover, .ui-win-max:hover, .ui-win-min:hover {
-    background:#283546;
-  }
-  .ui-win-close:before, .ui-win-max:before, .ui-win-min:before {
-    font-weight:bold;
-    color:#CDCDCD;
-    line-height:20px;
-    margin:7px;
+    &:hover {
+      background:#283546;
+    }
+    &:before {
+      font-weight:bold;
+      color:#CDCDCD;
+      line-height:20px;
+      margin:7px;
+    }
   }
   .ui-win-close:before {
     content:'x';
@@ -1065,7 +963,6 @@ html,body{
   opacity:0;
   top:0;
   left:0;
-  filter: alpha(opacity=0);
   @include box-shadow(0 0 4px #777777);
   @include transition(opacity 0.5s ease-in-out);
   a.ui-option {
@@ -1083,7 +980,6 @@ html,body{
 }
 .ui-popUp-active {
   opacity:1;
-  filter: alpha(opacity=100);
 }
 
 /* UI Layout
@@ -1126,7 +1022,6 @@ html,body{
   position:absolute;
   z-index:10000;
   opacity:0.5;
-  filter: alpha(opacity=50);
 }
 
 /* UI Tab
@@ -1414,7 +1309,6 @@ div.search {
 }
 .disabled {
   opacity:0.5;
-  filter: alpha(opacity=50);
 }
 
 /* UI Calendar
@@ -1529,7 +1423,7 @@ div.search {
     text-align: center;
     color: #fff;
     background: #222;
-    border-radius: 5px;
+    @include border-radius(5px);
     text-shadow: 0 0 5px #000;
     @include box-shadow(0 0 5px rgba(0,0,0,0.3));
     @include box-sizing(border-box);
@@ -1733,13 +1627,18 @@ div.search {
     height:100%;
   }
 }
-.iframe ul, .iframe ol {
-  padding-left:40px;
-}
-.iframe * {
+.iframe {
   margin:initial;
   padding:initial;
   color:initial;
+  * {
+    margin:initial;
+    padding:initial;
+    color:initial;
+  }
+  ul, ol {
+    padding-left:40px;
+  }
 }
 .ui-editor-header, .ui-editor-footer {
   overflow:hidden;
@@ -1751,16 +1650,16 @@ div.search {
 .ui-editor-header {
   border:1px solid #EBEBEB;
   padding-right:22px;
+  .ui-button-inner {
+    border:none;
+    @include border-radius(0);
+  }
 }
 .ui-editor-body {
   height:200px;
   border-left:1px solid #EBEBEB;
   border-right:1px solid #EBEBEB;
   position:relative;
-}
-.ui-editor-header .ui-button-inner {
-  border:none;
-  border-radius: 0;
 }
 .ui-editor-footer {
   color:#666666;
@@ -1828,7 +1727,7 @@ div.search {
   margin:0 10px 0 10px;
   background-image: url(../images/ui/color/color_picker_bar.png);
   background-repeat: no-repeat;
-  background-position: 50% 0%;
+  background-position: 50% 0;
   position:relative;
 }
 .ui-colorpicker-right {
@@ -2151,7 +2050,7 @@ div.search {
     color:#A2BEC7;
   }
   .arrow-left1 {
-    border: 0 solid #CCCCCC;
+    border-style: solid;
     border-color: transparent #5C758E;
     border-width: 10px 6px 10px 0;
     position: absolute;
@@ -2160,7 +2059,7 @@ div.search {
     width: 16px;
   }
   .arrow-left2 {
-    border: 0 solid #CCCCCC;
+    border-style: solid;
     border-color: transparent #81A5C7;
     border-width: 9px 6px 9px 0;
     position: absolute;
@@ -2169,7 +2068,7 @@ div.search {
     width: 16px;
   }
   .arrow-right1 {
-    border: 0 solid #CCCCCC;
+    border-style: solid;
     border-color: transparent #5C758E;
     border-width: 10px 0 10px 6px;
     position: absolute;
@@ -2178,7 +2077,7 @@ div.search {
     width: 16px;
   }
   .arrow-right2 {
-    border: 0 solid #CCCCCC;
+    border-style: solid;
     border-color: transparent #81A5C7;
     border-width: 9px 0 9px 6px;
     position: absolute;
@@ -2267,14 +2166,14 @@ div.search {
     margin-right:10px;
   }
   .day-container-drag {
-    height:0px;
+    height:0;
     position:relative;
   }
   .day-container-drag div {
     opacity:0.8;
   }
   .hour-mark {
-    border: 0 solid #FF4040;
+    border-style: solid;
     border-color: transparent #FF4040;
     border-width: 4px 0 4px 4px;
     position: absolute;
@@ -2323,13 +2222,13 @@ div.search {
     text-align:center;
     cursor: pointer;
     border:1px solid transparent;
-  }
-  tbody span.today {
-    border-color:#FFFFFF !important;
-  }
-  tbody span.selected {
-    background:#DDDDDD;
-    border-color:#DDDDDD;
+    &.today {
+      border-color:#FFFFFF !important;
+    }
+    &.selected {
+      background:#DDDDDD;
+      border-color:#DDDDDD;
+    }
   }
 }
 
